java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementEnumMethods-hints.pass
LBL_FIX_Impl_Methods_Enum_Values2
